--- a/css/_adventure-finder.scss
+++ b/css/_adventure-finder.scss
@@ -68,6 +68,25 @@
             flex-flow:row nowrap;
         }
 
+        .button-wrapper {
+            display:flex;
+            align-items:center;
+            flex-direction:column;
+
+            @media #{$md-up} {
+                flex-direction:column;
+                align-items: flex-start;
+            }
+
+            @media #{$lg-up} {
+                flex-direction:row;
+
+                a:first-child {
+                    margin-right:20px;
+                }
+            }
+        }
+
         .text {
             margin-top:30px;
 
@@ -89,6 +108,10 @@
                 margin:0 auto;
             }
         }
+    }
+
+    .sketches {
+        margin-top:60px;
     }
 
     .the-result {
