--- a/css/_portfolio-items.scss
+++ b/css/_portfolio-items.scss
@@ -149,6 +149,18 @@ ul.portfolio-items-list {
     padding:20px 40px;
     border-radius:12px;
     margin-top:30px;
+
+    &.yellow {
+        background-color:rgba(234, 168, 21, 0.2);
+    }
+
+    &.blue {
+        background-color:rgba(0, 170, 178, 0.1);
+    }
+
+    &.text-center {
+        text-align:center;
+    }
 }
 
 .align-center {
@@ -164,3 +176,17 @@ ul.portfolio-items-list {
     margin-right:10px;
     margin-top:10px;
 }
+
+table, th, td {
+    border: 1px solid $dark-grey;
+    border-collapse: collapse;
+    padding:10px;
+
+    p {
+        margin-bottom:0px;
+    }
+  }
+
+  .section {
+    margin-top:30px;
+  }
