--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -156,7 +156,7 @@ ul.bullets {
 }
 
 a {
-    text-decoration:none;
+    text-decoration:underline;
     color:$orange-dark;
     cursor:pointer;
 
