--- a/css/_portfolio-items.scss
+++ b/css/_portfolio-items.scss
@@ -1,15 +1,16 @@
 ul.portfolio-items-list {
     display: flex;  
     flex-flow: row wrap;
-    align-content: space-between;
     margin-left: -15px;
     margin-right: -15px;
 
     li.portfolio-item {
         position:relative;
         text-decoration:none;
+        display:flex;
         flex-direction: column;
         align-content:flex-start;
+        justify-content: space-between;
         text-align:center;
         width:100%;
         padding:0px 15px 50px 15px;
@@ -190,3 +191,14 @@ table, th, td {
   .section {
     margin-top:30px;
   }
+
+  .img-fixed-width {
+        width:50%;
+        height: auto;
+        display: block;
+        margin:0 auto;
+
+        @media #{$md-up} {
+            width: 100%;
+        }
+    }
