--- a/css/styles.css
+++ b/css/styles.css
@@ -452,6 +452,12 @@ a:hover {
   color: #007E85;
 }
 
+.button {
+  width: 100%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
 a.primary-button {
   display: inline-block;
   padding: 15px 25px;
@@ -963,8 +969,6 @@ ul.portfolio-items-list {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
   margin-left: -15px;
   margin-right: -15px;
 }
@@ -972,12 +976,18 @@ ul.portfolio-items-list {
 ul.portfolio-items-list li.portfolio-item {
   position: relative;
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   -ms-flex-line-pack: start;
       align-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   text-align: center;
   width: 100%;
   padding: 0px 15px 50px 15px;
@@ -1177,6 +1187,19 @@ table p, th p, td p {
 
 .section {
   margin-top: 30px;
+}
+
+.img-fixed-width {
+  width: 50%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .img-fixed-width {
+    width: 100%;
+  }
 }
 
 .home .skills-wrapper {
@@ -1254,8 +1277,6 @@ ul.portfolio-items-list {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
   margin-left: -15px;
   margin-right: -15px;
 }
@@ -1263,12 +1284,18 @@ ul.portfolio-items-list {
 ul.portfolio-items-list li.portfolio-item {
   position: relative;
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   -ms-flex-line-pack: start;
       align-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   text-align: center;
   width: 100%;
   padding: 0px 15px 50px 15px;
@@ -1468,6 +1495,19 @@ table p, th p, td p {
 
 .section {
   margin-top: 30px;
+}
+
+.img-fixed-width {
+  width: 50%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .img-fixed-width {
+    width: 100%;
+  }
 }
 
 .portfolio .portfolio-content-wrapper {
