--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -8,6 +8,7 @@ $blue:#00AAB2;
 $yellow:#eaa815;
 $orange:#f26414;
 $orange-dark:#C24E0A;
+$red:#c71c10;
 
 /*media queries*/
 $xs-only:only screen and (max-width: 554px);
